manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: ingress-router-backend-test
 annotations:
   kubernetes.io/ingress.class: nginx
   kubernetes.io/ingress.global-static-ip-name: "bootcamp-static-ip"
spec:
  rules:
  - host: ing175ip1.backend.cie-bootcamp.co.uk
    http:
     paths:
     - pathType: ImplementationSpecific
       backend:
          service:
             name: web-backend-backend-svc
             port:
               number: 80
